# pipeline

./: .coverage  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  ProjectDefinitionDocument.tex  README.md  SystemDesignDocument.tex  audit_wikidata_manuscripts.py  pyproject.toml  run.command
.claude/: settings.json
.github/: pull_request_template.md
assets/: icon.icns
converter/: __init__.py  app_launcher.py  main.py  requirements.txt
data/: catalog-v001.xml  marc-subset-10k.csv  marc-subset-10k.ttl  marc-subset-10k.validation-report.md
docs/: DUPLICATE_PREVENTION.md  WIKIDATA_REVERT_SAFETY.md
installer/: make_icon.py
mappings/: marc-mapping-table.csv  marc-to-rdf-mapping.md
ner/: .gitignore  HalleluBERT.txt  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_SUMMARY.md  NER_TRAINING_REPORT.md  NER_VALIDATION_RULES.md  NEW_COMMENTS_ANALYSIS.md  README.md  SUPERVISOR_FEEDBACK_CHECKLIST.md  TRAINING_STATUS.md  annotate_context.py  balance_dataset.py  baseline_5fold_results.json  baseline_5fold_results_v2.json  baseline_5fold_results_v3.json  compare_models.py  compare_models_evidence.py  create_bio_labels.py  create_snorkel_dataset.py  create_training_db.py  detailed_error_analysis.py  dictabert_error_analysis.json  entity_normalize.py  evaluate_baselines_5fold.py  evaluate_baselines_5fold_v2.py  evaluate_baselines_5fold_v3.py  extract_contents_entities.py  extract_entities.py  extract_marc_entities.py  extract_multi_entity_dataset.py  extract_pdf_comments.py  extract_provenance_entities.py  generate_synthetic_entities.py  generate_validation_report.py  genre_classifier_model.py  inference_pipeline.py  marc500_sentence_model.py  (+20 more)
(+235 files in other folders)
