[project]
name = "mhm-pipeline"
version = "0.1.0"
description = "MHM MARC-to-RDF Desktop Pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
dependencies = [
    "pymarc>=5.0",
    "rdflib>=7.0",
    "pyshacl>=0.25",
    "torch>=2.3",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "sentencepiece>=0.1.99",
    "safetensors>=0.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "PyQt6>=6.7",
    "platformdirs>=4.2",
    "requests>=2.31",
    "protobuf>=7.34.1",
    "scikit-learn>=1.3",
    "seqeval>=1.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[project.scripts]
mhm-pipeline = "mhm_pipeline.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mhm_pipeline"]

[tool.ruff]
line-length = 100
src = ["src"]
extend-exclude = ["ner/", "ontology/", "data/", "installer/", "paper/", "audit_*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "F821", "E722", "E402", "F401", "F402", "B008", "B007"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "--cov=src/mhm_pipeline --cov-report=term-missing -q"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.7",
]
